# cgal

CGAL_ipelets/demo/CGAL_ipelets/: CMakeLists.txt  wspd.cpp
CGAL_ipelets/demo/CGAL_ipelets/lua/: libCGAL_wspd.lua
Wspd/demo/Wspd/: .gitignore  CMakeLists.txt  demo_wspd_3.cpp
Wspd/demo/Wspd/wspd_2/: WSPDGraphicsItem.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Wspd/doc/Wspd/: Doxyfile.in  PackageDescription.txt  Wspd.txt  dependencies  examples.txt  graph_traits.txt
Wspd/doc/Wspd/CGAL/: Split_tree.h  Split_tree_node.h  Split_tree_traits_2.h  Split_tree_traits_3.h  Split_tree_traits_d.h  WSPD.h  WSPD_spanner.h  Well_separated_pair.h
Wspd/doc/Wspd/Concepts/: RepresentativeChooser.h  SplitTreeTraits.h
Wspd/examples/Wspd/: .gitignore  CMakeLists.txt  example_wspd_d.cpp  example_wspd_worst_case.cpp
Wspd/include/CGAL/: Split_tree.h  Split_tree_node.h  Split_tree_traits_2.h  Split_tree_traits_3.h  Split_tree_traits_d.h  WSPD.h  WSPD_exact_proximity.h  WSPD_spanner.h  Well_separated_pair.h
Wspd/include/CGAL/boost/graph/: graph_traits_WSPD_spanner.h
Wspd/package_info/Wspd/: copyright  description.txt  maintainer
Wspd/test/Wspd/: .gitignore  CMakeLists.txt  split_tree_test.cpp  test_split_tree.cpp  test_wspd_3  test_wspd_3.cpp  test_wspd_d  test_wspd_d.cpp  test_wspd_worst_case.cpp  wspd_exact_proximity_test.cpp  wspd_spanner_test.cpp  wspd_test.cpp
Wspd/test/Wspd/data/: closest_pair.txt  points.txt
Wspd/test/Wspd/include/CGAL/: split_tree_test.h  test_split_tree.h  wspd_exact_proximity_test.h  wspd_spanner_test.h  wspd_test.h  wspd_test_util.h
